// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders modal 1`] = `
<div
  aria-modal="true"
  class="fade modal show"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <div
          class="modal-title h4"
        >
          Share as Blueprint
        </div>
      </div>
      <div
        class="modal-body"
      >
        <form
          class=""
          novalidate=""
        >
          <div>
            <div
              class="formGroup form-group row"
            >
              <label
                class="label form-label col-form-label col-xl-2 col-lg-3"
                for="name"
              >
                Name
              </label>
              <div
                class="col-xl-10 col-lg-9"
              >
                <input
                  class="form-control"
                  id="name"
                  name="name"
                  value="testExtension"
                />
                <small
                  class="text-muted form-text"
                >
                  A name for the blueprint
                </small>
              </div>
            </div>
            <div
              class="formGroup form-group row"
            >
              <label
                class="label form-label col-form-label col-xl-2 col-lg-3"
                for="blueprintId"
              >
                Registry Id
              </label>
              <div
                class="col-xl-10 col-lg-9"
              >
                <input
                  class="form-control"
                  id="blueprintId"
                  name="blueprintId"
                  value="@test/testextension"
                />
                <small
                  class="text-muted form-text"
                >
                  <span>
                    A unique id for the blueprint.
                     
                    <i>
                      Cannot be modified once shared.
                    </i>
                  </span>
                </small>
              </div>
            </div>
            <div
              class="formGroup form-group row"
            >
              <label
                class="label form-label col-form-label col-xl-2 col-lg-3"
                for="description"
              >
                Description
              </label>
              <div
                class="col-xl-10 col-lg-9"
              >
                <input
                  class="form-control"
                  id="description"
                  name="description"
                  value="Created with the PixieBrix Page Editor"
                />
                <small
                  class="text-muted form-text"
                >
                  A short description of the blueprint
                </small>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <div
                class="text-info col-sm-12"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-info-circle fa-w-16 "
                  data-icon="info-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    fill="currentColor"
                  />
                </svg>
                 The blueprint's dependencies will automatically also be shared.
              </div>
            </div>
            <div
              class="formGroup form-group row"
            >
              <label
                class="label form-label col-form-label col-xl-2 col-lg-3"
                for="public"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-globe fa-w-16 "
                    data-icon="globe"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 496 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                      fill="currentColor"
                    />
                  </svg>
                   Public
                </span>
              </label>
              <div
                class="col-xl-10 col-lg-9"
              >
                <div
                  class="root"
                >
                  <div
                    class="switch btn off btn-light"
                  >
                    <div
                      class="switch-group"
                    >
                      <span
                        class="switch-on btn btn-primary"
                      >
                         
                      </span>
                      <span
                        class="switch-off btn btn-light"
                      >
                         
                      </span>
                      <span
                        class="switch-handle btn btn-light"
                      />
                    </div>
                  </div>
                </div>
                <small
                  class="text-muted form-text"
                >
                   
                </small>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-primary"
              type="submit"
            >
              Convert
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`requires user scope 1`] = `
<div
  aria-modal="true"
  class="fade modal show"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <div
          class="modal-title h4"
        >
          Share as Blueprint
        </div>
      </div>
      <div
        class="modal-body"
      >
        <div
          class="root"
        >
          <div
            class="font-weight-bold"
          >
            To share a blueprint, you must first set an account alias for your PixieBrix account
          </div>
          <div
            class="fade mt-2 alert alert-info show"
            role="alert"
          >
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-info fa-w-6 "
                data-icon="info"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
                  fill="currentColor"
                />
              </svg>
               Your account alias is a unique name used to prevent duplicate identifiers between the bricks you create and public/team bricks.
            </p>
          </div>
          <div
            class="fade mt-2 alert alert-info show"
            role="alert"
          >
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-eye-slash fa-w-20 "
                data-icon="eye-slash"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
                  fill="currentColor"
                />
              </svg>
               You account alias will not be visible to anyone unless you choose to share a brick or extension.
            </p>
          </div>
          <div
            class="container"
          >
            <form
              class="mt-2"
              novalidate=""
            >
              <div
                class="formGroup form-group row"
              >
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="scope"
                >
                  Account Alias
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <input
                    class="form-control"
                    id="scope"
                    name="scope"
                    placeholder="@peter-parker"
                    value=""
                  />
                  <small
                    class="text-muted form-text"
                  >
                    Your @alias for publishing bricks, e.g., @peter-parker
                  </small>
                </div>
              </div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Set My Account Alias
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
